force-app/main/default/objects/UnitPriceObservation__c/UnitPriceObservation__c.object-meta.xml
<CustomObject>
    <description>Daily unit price observations for the reporting drill-down cursor demo.</description>
    <label>Unit Price Observation</label>
    <nameField>
        <displayFormat>UPO-{00000}</displayFormat>
        <label>Observation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unit Price Observations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>