force-app/main/default/objects/UnitPriceObservation__c/fields/EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDate__c</fullName>
    <description>Calendar day for this price observation.</description>
    <label>Effective Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>