force-app/main/default/objects/UnitPriceObservation__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Component product for this price series.</description>
    <label>Product</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RAM</fullName>
                <default>true</default>
                <label>RAM</label>
            </value>
            <value>
                <fullName>CPU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>